# HY-chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Dockerfile.frontend.prebuilt  HY-chat-structure.drawio  README.md  alembic.ini  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: entrypoint.py  main.py
app/agents/: chat.py  graph.py
app/api/: router.py
app/auth/: __init__.py  dependencies.py  errors.py  langgraph.py  serializers.py  service.py
app/cache/: __init__.py  service.py
app/core/: admin_contact.py  config.py  constants.py  logging.py  types.py
app/db/: init_db.py  models.py  session.py
app/models/: catalog.py  router.py
app/policies/: __init__.py  service.py
app/rag/: embeddings.py  loaders.py  service.py
app/schemas/: agent.py  auth.py  chat.py  conversation.py  images.py
app/services/: chat_response_cache.py  email_service.py  file_service.py  image_service.py  memory_service.py  redis_client.py  upload_service.py
app/storage/: __init__.py  service.py
app/tools/: builtin.py  command_tools.py  external.py  file_tools.py  image_tools.py  rag_tools.py  registry.py
docs/: code-reading-guide.md
frontend/: .env.example  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
migrations/: env.py
scripts/: render_architecture_pngs.py  smoke_test.sh
tests/: test_api.py  test_auth.py  test_core.py  test_file_service.py  test_images.py  test_loaders.py  test_runtime_security.py  test_workspace_security.py
(+92 files in other folders)
