[project]
name = "hy-chat"
version = "0.1.0"
description = "An extensible AI chat platform with RAG, tool calling, dynamic model routing, SSE streaming, and Redis caching."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic-settings>=2.5,<3.0",
    "python-dotenv>=1.0,<2.0",
    "langchain>=0.3,<2.0",
    "langchain-openai>=0.2,<2.0",
    "langgraph>=0.2,<2.0",
    "langsmith>=0.1,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "redis>=5.0,<7.0",
    "httpx>=0.27,<1.0",
    "langgraph-cli[inmem]>=0.4,<1.0",
    "pgvector>=0.3,<1.0",
    "pypdf>=5,<7",
    "python-docx>=1.1,<2",
    "python-pptx>=1.0,<2",
    "openpyxl>=3.1,<4",
    "beautifulsoup4>=4.12,<5",
    "langchain-text-splitters>=1.0,<2",
    "python-multipart>=0.0.20,<1",
    "pyjwt[crypto]>=2.10,<3",
    "pwdlib[argon2]>=0.2,<1",
    "email-validator>=2.2,<3",
    "boto3>=1.35,<2",
    "alembic>=1.14,<2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.25,<2",
    "ruff>=0.12,<1",
]
